--- a/Motocycles/Views/Main/Base.lproj/Main.storyboard
+++ b/Motocycles/Views/Main/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cUV-tr-uWy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WYt-ZN-Ncm">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -18,23 +18,23 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Horarios disponibles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2z-k0-wcW">
-                                <rect key="frame" x="16" y="104" width="382" height="36"/>
+                                <rect key="frame" x="16" y="98" width="382" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" sectionIndexMinimumDisplayRowCount="1" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="5Mo-cV-xjv">
-                                <rect key="frame" x="20" y="150" width="374" height="712"/>
+                                <rect key="frame" x="19" y="150" width="375" height="712"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <color key="sectionIndexBackgroundColor" systemColor="labelColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="2" indentationWidth="0.0" reuseIdentifier="idCellHorarios" focusStyle="custom" rowHeight="63" id="USd-iM-gEb">
-                                        <rect key="frame" x="0.0" y="44.5" width="374" height="63"/>
+                                        <rect key="frame" x="0.0" y="44.5" width="375" height="63"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="USd-iM-gEb" id="01a-mG-QJu">
-                                            <rect key="frame" x="0.0" y="0.0" width="345.5" height="63"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="346.5" height="63"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -44,20 +44,21 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="u2z-k0-wcW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="A09-IE-Tbx"/>
-                            <constraint firstItem="u2z-k0-wcW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="16" id="CZZ-Aa-sJy"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u2z-k0-wcW" secondAttribute="trailing" constant="16" id="Ivm-VJ-vNn"/>
+                            <constraint firstItem="u2z-k0-wcW" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="IRK-hy-SBW"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="u2z-k0-wcW" secondAttribute="trailing" constant="16" id="ooU-kn-c0X"/>
+                            <constraint firstItem="u2z-k0-wcW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="r9i-VA-hf1"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xTe-LP-4y4"/>
                     <connections>
+                        <outlet property="lblTitlw" destination="u2z-k0-wcW" id="scG-Nj-4EV"/>
                         <outlet property="tableHorarios" destination="5Mo-cV-xjv" id="gp4-4T-dUo"/>
                         <segue destination="zQ7-aS-D0C" kind="show" identifier="idDetail" id="AqJ-9M-W3J"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="926.08695652173924" y="63.616071428571423"/>
+            <point key="canvasLocation" x="1833.3333333333335" y="63.616071428571423"/>
         </scene>
         <!--Detal Motocycle-->
         <scene sceneID="By6-8z-IKw">
@@ -68,7 +69,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wok-Kp-dO3">
-                                <rect key="frame" x="20" y="110" width="374" height="706"/>
+                                <rect key="frame" x="19" y="110" width="375" height="706"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qio-Tg-CdX">
@@ -88,7 +89,7 @@
                                         <size key="customSize" width="150" height="150"/>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mvw-3Y-hLK">
-                                        <rect key="frame" x="224" y="0.0" width="150" height="150"/>
+                                        <rect key="frame" x="225" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zMe-dh-dPm">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
@@ -105,7 +106,7 @@
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="oKF-vB-uoU">
-                                        <rect key="frame" x="224" y="160" width="150" height="150"/>
+                                        <rect key="frame" x="225" y="160" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="GOx-SO-X3T">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
@@ -121,7 +122,7 @@
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="t7r-6n-5UN">
-                                        <rect key="frame" x="224" y="320" width="150" height="150"/>
+                                        <rect key="frame" x="225" y="320" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="1Eq-MV-0OW">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
@@ -137,7 +138,7 @@
                                         </collectionViewCellContentView>
                                     </collectionViewCell>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dIy-FB-P8u">
-                                        <rect key="frame" x="224" y="480" width="150" height="150"/>
+                                        <rect key="frame" x="225" y="480" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="2ef-p8-t02">
                                             <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
@@ -146,36 +147,55 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aan-aY-lWr">
+                                <rect key="frame" x="30" y="822" width="354" height="50"/>
+                                <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="MYF-DV-RYn"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Aceptar"/>
+                                <connections>
+                                    <action selector="btnAccept:" destination="zQ7-aS-D0C" eventType="touchUpInside" id="yNV-9y-itk"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="wv4-xn-wrr"/>
-                        <color key="backgroundColor" systemColor="systemRedColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="wv4-xn-wrr" firstAttribute="trailing" secondItem="aan-aY-lWr" secondAttribute="trailing" constant="30" id="M7x-FA-81d"/>
+                            <constraint firstItem="aan-aY-lWr" firstAttribute="leading" secondItem="wv4-xn-wrr" secondAttribute="leading" constant="30" id="eZO-sg-ejC"/>
+                            <constraint firstItem="aan-aY-lWr" firstAttribute="bottom" secondItem="wv4-xn-wrr" secondAttribute="bottom" constant="10" id="fHH-wF-vFu"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="2R3-RP-X4E"/>
                     <connections>
+                        <outlet property="btnAccept" destination="aan-aY-lWr" id="Wfd-ca-Ugb"/>
                         <outlet property="colecctionMotociclesView" destination="wok-Kp-dO3" id="6wz-Qi-olB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="chI-Yx-X81" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1810.144927536232" y="63.616071428571423"/>
+            <point key="canvasLocation" x="2717.3913043478265" y="63.616071428571423"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="zK4-m5-ZsE">
+        <scene sceneID="rgL-42-vgg">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cUV-tr-uWy" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WYt-ZN-Ncm" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="tQ3-pa-IG6">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6TV-1F-gRA">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="jcR-fA-d6m"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nHe-pb-pcn"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BMa-gE-Z5i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="h34-vq-2Ti" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="18.840579710144929" y="63.616071428571423"/>
+            <point key="canvasLocation" x="926.08695652173924" y="63.616071428571423"/>
         </scene>
     </scenes>
     <resources>
@@ -185,8 +205,8 @@
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
-        <systemColor name="systemRedColor">
-            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
