--- a/Motocycles/Views/Main/Base.lproj/Main.storyboard
+++ b/Motocycles/Views/Main/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="WYt-ZN-Ncm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="D33-5Y-GQH">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
@@ -58,7 +58,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1833.3333333333335" y="63.616071428571423"/>
+            <point key="canvasLocation" x="2740.579710144928" y="63.616071428571423"/>
         </scene>
         <!--Detal Motocycle-->
         <scene sceneID="By6-8z-IKw">
@@ -69,7 +69,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wok-Kp-dO3">
-                                <rect key="frame" x="19" y="110" width="375" height="706"/>
+                                <rect key="frame" x="19" y="88" width="375" height="701"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Qio-Tg-CdX">
@@ -88,7 +88,7 @@
                                         </collectionViewCellContentView>
                                         <size key="customSize" width="150" height="150"/>
                                     </collectionViewCell>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Mvw-3Y-hLK">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" id="Mvw-3Y-hLK">
                                         <rect key="frame" x="225" y="0.0" width="150" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="zMe-dh-dPm">
@@ -177,25 +177,74 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="chI-Yx-X81" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2717.3913043478265" y="63.616071428571423"/>
+            <point key="canvasLocation" x="3624.6376811594205" y="63.616071428571423"/>
+        </scene>
+        <!--Welcome Controller-->
+        <scene sceneID="4BE-eL-cLW">
+            <objects>
+                <viewController id="W8L-bE-P6b" customClass="WelcomeController" customModule="Motocycles" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="YzK-ce-QXp">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="brT-eD-yCc">
+                                <rect key="frame" x="20" y="792" width="374" height="50"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="csM-UC-eYR"/>
+                                </constraints>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Saltar">
+                                    <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="18"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="BYZ-38-t0r" kind="show" id="axi-Mp-oFs"/>
+                                </connections>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7vZ-T4-reg">
+                                <rect key="frame" x="20" y="20" width="374" height="622"/>
+                                <color key="backgroundColor" systemColor="systemTealColor"/>
+                            </view>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="j1q-1f-gJk"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="brT-eD-yCc" firstAttribute="leading" secondItem="j1q-1f-gJk" secondAttribute="leading" constant="20" id="4Fi-KC-ABX"/>
+                            <constraint firstItem="j1q-1f-gJk" firstAttribute="trailing" secondItem="7vZ-T4-reg" secondAttribute="trailing" constant="20" id="647-G9-v8S"/>
+                            <constraint firstItem="brT-eD-yCc" firstAttribute="top" secondItem="7vZ-T4-reg" secondAttribute="bottom" constant="150" id="69f-iQ-Z4x"/>
+                            <constraint firstItem="7vZ-T4-reg" firstAttribute="leading" secondItem="j1q-1f-gJk" secondAttribute="leading" constant="20" id="YEe-4r-mr8"/>
+                            <constraint firstItem="j1q-1f-gJk" firstAttribute="bottom" secondItem="brT-eD-yCc" secondAttribute="bottom" constant="20" id="tKE-z3-zDj"/>
+                            <constraint firstItem="j1q-1f-gJk" firstAttribute="trailing" secondItem="brT-eD-yCc" secondAttribute="trailing" constant="20" id="vMf-XF-VFc"/>
+                            <constraint firstItem="7vZ-T4-reg" firstAttribute="top" secondItem="YzK-ce-QXp" secondAttribute="top" constant="20" id="xTj-VJ-tZT"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="JHu-Hf-lM4"/>
+                    <connections>
+                        <outlet property="viewCarousel" destination="7vZ-T4-reg" id="D3q-o6-x84"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E1a-aR-RX5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1876.8115942028987" y="63.616071428571423"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="rgL-42-vgg">
+        <scene sceneID="RE1-bb-s7p">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="WYt-ZN-Ncm" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="D33-5Y-GQH" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6TV-1F-gRA">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="eEN-YB-NbA">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="nHe-pb-pcn"/>
+                        <segue destination="W8L-bE-P6b" kind="relationship" relationship="rootViewController" id="b9U-nS-VI7"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="h34-vq-2Ti" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SLl-Lh-SBT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="926.08695652173924" y="63.616071428571423"/>
+            <point key="canvasLocation" x="1053.6231884057972" y="63.616071428571423"/>
         </scene>
     </scenes>
     <resources>
@@ -207,6 +256,12 @@
         </systemColor>
         <systemColor name="systemGreenColor">
             <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemOrangeColor">
+            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemTealColor">
+            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
